2007-04-24 Roland Dreier <rolandd@cisco.com>

	* src/umad.c: In umad_open_port, fix declaration of
	  return value from dev_to_umad_id

2007-04-24 Hal Rosenstock <halr@voltaire.com>

	* src/umad,c: In get_ca, handle drivers which do not 
	  support SYS_CA_HW_VERS or SYS_CA_TYPE

2007-03-29 Hal Rosenstock <halr@voltaire.com>

	* Release version 1.1.0.

2007-03-22 Hal Rosenstock <halr@voltaire.com>

	* src/umad.c: Implement GRH support in umad_set_grh

2007-03-11 Dotan Barak <dotanb@mellanox.co.il> 

	* src/umad.c: In umad_get_ca_portguids, add release_ca call
	  in error flow to prevent resource leak

2007-01-25  Hal Rosenstock <halr@voltaire.com>

	* Release version 1.0.2. 

2006-11-20  Sasha Khapyorsky <sashak@voltaire.com>

	* src/umad.c: Fix various uses of printf() style functions

2006-10-31  Sasha Khapyorsky <sashak@voltaire.com>

	* src/umad.c (umad_set_addr_net): Fix endian used in
	  TRACE macro

2006-09-28  Sasha Khapyorsky <sashak@voltaire.com>

	* src/umad.c (umad_open_port): Show open()'s errno string
